--- a/src/Inquiries/TicketFlow.Services.Inquiries.Api/TicketFlow.Services.Inquiries.Api.csproj
+++ b/src/Inquiries/TicketFlow.Services.Inquiries.Api/TicketFlow.Services.Inquiries.Api.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.Common" Version="4.14.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -16,6 +17,5 @@
     <ItemGroup>
       <ProjectReference Include="..\TicketFlow.Services.Inquiries.Core\TicketFlow.Services.Inquiries.Core.csproj" />
     </ItemGroup>
-
 
 </Project>
