Disabled publisher confirms

--- a/src/Inquiries/TicketFlow.Services.Inquiries.Api/appsettings.json
+++ b/src/Inquiries/TicketFlow.Services.Inquiries.Api/appsettings.json
@@ -40,8 +40,8 @@
       "MaxMessagesFetchedPerConsumer": 10
     },
     "Producer": {
-      "PublisherConfirmsEnabled":  true,
-      "PublishMandatoryEnabled": true
+      "PublisherConfirmsEnabled":  false,
+      "PublishMandatoryEnabled": false
     }
   }
 }
