Refactor RabbitMQ service in Docker Compose to build from Dockerfile and include initialization script

--- a/compose/Dockerfile
+++ b/compose/Dockerfile
@@ -1,4 +1,8 @@
 FROM rabbitmq:3.13.6-management
-RUN rabbitmq-plugins enable rabbitmq_consistent_hash_exchange
+
+# Copy initialization script
+COPY rabbitmq-init.sh /usr/local/bin/rabbitmq-init.sh
+RUN chmod +x /usr/local/bin/rabbitmq-init.sh
+
 # Add this to ensure we start fresh
 ENV RABBITMQ_SERVER_ADDITIONAL_ERL_ARGS="-rabbitmq_management force_fine_statistics true"
