--- a/compose/docker-compose.yaml
+++ b/compose/docker-compose.yaml
@@ -2,17 +2,22 @@ version: "1.0"
 
 services:
   rabbitmq:
-    image: rabbitmq:3.13
+    build:
+      context: .
+      dockerfile: Dockerfile
     container_name: 'ticketflow-rabbitmq'
     restart: unless-stopped
-    volumes:
-      - rabbitmq:/var/lib/rabbitmq
-    networks:
-      - TicketFlow
     ports:
       - 5672:5672
       - 15672:15672
-      - 15692:15692
+    volumes:
+      - rabbitmq:/var/lib/rabbitmq
+    command: >
+      bash -c "
+        docker-entrypoint.sh rabbitmq-server &
+        /usr/local/bin/rabbitmq-init.sh
+        wait
+      "
   postgres:
     image: postgres
     shm_size: '4gb'
